--- a/Tatexkz/templates/base.html
+++ b/Tatexkz/templates/base.html
@@ -35,13 +35,15 @@
                         <span>+7 (705) 777-46-00</span>
                     </a>
                     <a target="_blank" href="https://www.instagram.com/tatex.kz/"
-                        class="header__number _icon-instagram"> <span>Наш инстаграм</span></a>
+                        class="header__number _icon-instagram"> <span>Наш Инстаграм</span></a>
                     <a target="_blank" href="https://t.me/tatexkz" class="header__number _icon-telegram"><span>Наш
                             Телеграм</span></a>
                     <a target="_blank"
                         href="https://api.whatsapp.com/send?phone=77057774600&text=%D0%94%D0%BE%D0%B1%D1%80%D1%8B%D0%B9%20%D0%B4%D0%B5%D0%BD%D1%8C%2C%20%D1%8F%20%D1%81%20%D1%81%D0%B0%D0%B9%D1%82%D0%B0%20Tatex.kz%20"
-                        class="header__number _icon-whatsapp"><span>Начать
-                            чат в whatsapp</span></a>
+                        class="header__number">
+                        <img width="24px" style="margin-right: 0.5rem;" src="{% static 'img/whatsapp.svg' %}" alt="">
+                        <span>Начать
+                            чат в Whatsapp</span></a>
 
                 </div>
             </div>
