--- a/Tatexkz/templates/order/order.html
+++ b/Tatexkz/templates/order/order.html
@@ -41,7 +41,7 @@
                                 <div class="form-order__input-box">
                                     <div class="form-order__input-title _nessesary">Вес(кг)</div>
                                     <div class="input _icon-weight">
-                                        <input data-inputnumber required autocomplete="off" type="text" name="weight"
+                                        <input value="0.3" data-inputnumber required autocomplete="off" type="text" name="weight"
                                             data-error="Ошибка" data-inputmask-clearmaskonlostfocus="true"
                                             data-inputmask="'mask': '9{+|1}.9 (кг)', 'greedy' : false"
                                             placeholder="Вес (кг)" class="form-order__input" value="{{weight}}">
@@ -68,7 +68,7 @@
                                 <div class="form-order__input-box">
                                     <div class="form-order__input-title _nessesary">Вес(кг)</div>
                                     <div class="input _icon-weight">
-                                        <input data-inputnumber required autocomplete="off" type="text" name="weight"
+                                        <input  data-inputnumber required autocomplete="off" type="text" name="weight"
                                             data-error="Ошибка" data-inputmask-clearmaskonlostfocus="true"
                                             data-inputmask="'mask': '9{+|1}.9 (кг)', 'greedy' : false"
                                             placeholder="Вес (кг)" class="form-order__input" value="{{weight}}">
