--- a/Tatexkz/templates/home/index.html
+++ b/Tatexkz/templates/home/index.html
@@ -60,7 +60,7 @@
 						</div>
 						<div class="first-screen-calc__input-box">
 							<div class="first-screen-calc__input input _icon-cart">
-								<input data-inputnumber required autocomplete="off" type="text" name="weight"
+								<input value="0.3" data-inputnumber required autocomplete="off" type="text" name="weight"
 									data-error="Ошибка" data-inputmask-clearmaskonlostfocus="true"
 									data-inputmask="'inputmode': 'decimal', 'substitutes': {',': '.'}, 'mask': '9{+|1}\\.|\\,9 (кг)', 'greedy' : false, 'placeholder': '0'"
 									placeholder="Вес (кг)" class="first-screen-calc__weight">
@@ -71,8 +71,7 @@
 								<input hidden name="promo" data-inputnumber autocomplete="off" type="text"
 									data-error="Ошибка" placeholder="Промокод" class="first-screen-calc__weight">
 							</div>
-						</div>
-						
+						</div>		
 					</div>
 					<div data-for="package" class="first-screen-calc__params package-params">
 						<div class="first-screen-calc__input-box">
@@ -104,7 +103,7 @@
 								<input data-inputnumber required autocomplete="off" type="text" name="weight"
 									data-error="Ошибка" data-inputmask-clearmaskonlostfocus="true"
 									data-inputmask="'inputmode': 'decimal', 'substitutes': {',': '.'}, 'mask': '9{+|1}\\.|\\,9 (кг)', 'greedy' : false, 'placeholder': '0'"
-									placeholder="Вес (кг)" class="first-screen-calc__weight">
+									placeholder="Вес (кг)"    class="first-screen-calc__weight">
 							</div>
 						</div>
 						<div class="first-screen-calc__input-box ">
