--- a/Tatexkz/templates/order/order.html
+++ b/Tatexkz/templates/order/order.html
@@ -180,7 +180,7 @@
                                     <div class="form-order__input-title _nessesary">Адрес отправителя</div>
                                     <div class="input">
                                         <input required autocomplete="off" type="text" name="sendersAddress"
-                                            data-error="Ошибка" placeholder="улица, дом, офис/квартира, этаж"
+                                            data-error="Ошибка" placeholder="Улица, дом, офис/квартира, этаж"
                                             class="form-order__input">
                                     </div>
                                 </div>
@@ -188,7 +188,7 @@
                                     <div class="form-order__input-title _nessesary">Адрес получателя</div>
                                     <div class="input">
                                         <input required autocomplete="off" type="text" name="recipientAddress"
-                                            data-error="Ошибка" placeholder="улица, дом, офис/квартира, этаж"
+                                            data-error="Ошибка" placeholder="Улица, дом, офис/квартира, этаж"
                                             class="form-order__input">
                                     </div>
                                 </div>
