--- a/Tatexkz/templates/home/index.html
+++ b/Tatexkz/templates/home/index.html
@@ -67,7 +67,7 @@
 							</div>
 						</div>
 						<div class="first-screen-calc__input-box">
-							<div style="margin: 0; padding:0;" class="first-screen-calc__input input">
+							<div style="margin: 0; padding:0;" class="promo-input first-screen-calc__input input">
 								<input hidden name="promo" data-inputnumber autocomplete="off" type="text"
 									data-error="Ошибка" placeholder="Промокод" class="first-screen-calc__weight">
 							</div>
@@ -122,13 +122,13 @@
 							</div>
 						</div>
 						<div class="first-screen-calc__input-box">
-							<div style="margin: 0; padding:0;" class="first-screen-calc__input input">
+							<div  style="margin: 0; padding:0; " class="promo-input first-screen-calc__input input">
 								<input hidden name="promo" data-inputnumber autocomplete="off" type="text"
 									data-error="Ошибка" placeholder="Промокод" class="first-screen-calc__weight">
 							</div>
 						</div>
 					</div>
-					<div class="first-screen-calc__input-box">
+					<div id="promo-box" class="first-screen-calc__input-box">
 						<div style="border:none;" class="first-screen-calc__input input">
 							<input type="checkbox" class="checkbox__input " id="promo" name="print"
 									value="False">
