--- a/Tatexkz/templates/coop/cooperation.html
+++ b/Tatexkz/templates/coop/cooperation.html
@@ -10,13 +10,9 @@
 		<section class="page__coop coop">
 			<div class="coop__container">
 				<div class="coop__text-box">
-					<h2 class="coop__text-box-title">Заключение договора</h2>
+					<h2 class="coop__text-box-title">{{title}}</h2>
 					<div class="coop__text-box-text">
-						Для заключения договора вам необходимо заполнить заявку, представленную ниже. После
-						заполнения заявки с
-						вами свяжется специалист отдела продаж для выявления текущих потребностей по отправлениям и
-						расскажет о
-						возможности заключения договора с Tatex.
+						{{text|safe}}
 					</div>
 				</div>
 				<div class="coop__form-box">
