--- a/Tatexkz/templates/base.html
+++ b/Tatexkz/templates/base.html
@@ -99,20 +99,20 @@
                             class="footer-social-media__img _icon-telegram"></a>
                     </div>
                     <div class="footer__links footer-link">
-                        <a href="" class="footer-link__box">
-                            <div class="footer-link__text">Documentation</div>
+                        <a href="/oferta/" class="footer-link__box">
+                            <div class="footer-link__text">Оферта</div>
                         </a>
                         <a href="/#about-us" data-goto=".about-us" class="footer-link__box">
-                            <div class="footer-link__text">About Us</div>
+                            <div class="footer-link__text">О нас</div>
                         </a>
-                        <a href="" class="footer-link__box">
-                            <div class="footer-link__text">Pricing</div>
+                        <a href="/#reviews" data-goto=".reviews" class="footer-link__box">
+                            <div class="footer-link__text">Отзывы</div>
                         </a>
                         <a href="/#questions" data-goto=".questions" class="footer-link__box">
                             <div class="footer-link__text">FAQ</div>
                         </a>
-                        <a href="" class="footer-link__box">
-                            <div class="footer-link__text">Support</div>
+                        <a href="/privacy/" data-goto=".reviews" class="footer-link__box">
+                            <div class="footer-link__text">Политика приватности</div>
                         </a>
                     </div>
                 </div>
