--- a/Tatexkz/templates/coop/cooperation.html
+++ b/Tatexkz/templates/coop/cooperation.html
@@ -52,7 +52,7 @@
 							</div>
 						</div>
 						<div class="coop-form__block">
-							<h3 class="coop-form__personal-title">Услуга</h3>
+							<h3 class="coop-form__personal-title">{% trans 'Услуга' %}</h3>
 							<div class="coop-form__personal coop_grid">
 								<div class="coop-form__input-box">
 									<div class="coop_grid__checkbox checkbox">
